--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
     "issues": "https://github.com/zhangv/wechat-apiclient/issues"
   },
   "require": {
-    "php": ">=7.0"
+    "php": ">=7.0",
+    "ext-curl": "*",
+    "ext-json": "*",
+    "ext-mcrypt": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "6.5.8",
