add redis cache provider

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "php": ">=7.0",
     "ext-curl": "*",
     "ext-json": "*",
+    "ext-redis": "*",
     "ext-mcrypt": "*"
   },
   "require-dev": {
