--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "phing/phing": "2.*",
     "phploc/phploc": "^4.0",
     "pdepend/pdepend" : "2.5.2",
-    "sebastian/phpcpd": "^3.0"
+    "sebastian/phpcpd": "^3.0",
+    "symfony/dependency-injection": "4.1.12"
   },
   "autoload": {
     "psr-4": {
